--- a/src/cart.html
+++ b/src/cart.html
@@ -43,7 +43,141 @@
         </div>
     </header>
 
-    <main>
+    <main class="main">
+        <section class="cart">
+            <h2 class="visually-hidden">Корзина</h2>
+            <div class="container cart__container">
+                        <section class="cart-goods">
+                            <h3 class="cart-goods__title">Корзина</h3>
+                            <div class="visually-hidden">Список товаров</div>
+                            <ul class="cart-goods__list">
+                                <li class="cart-goods__item item">
+                                    <img src="img/monic.jpg" class="item__img" alt="">
+                                    <div class="item__detail">
+                                        <h4 class="item__title">Монитор AOC 24G2U/BK</h4>
+                                        <p class="item__vendor-code">Артикул: 654651968</p>
+                                    </div>
+                                    <div class="item__controle">
+                                        <div class="item__count">
+                                            <button class="item__btn item__btn_dec">–</button>
+                                            <output>1</output>
+                                            <button class="item__btn item__btn_inc">+</button>
+                                        </div>
+                                    </div>
+                                    <p class="item__price">20799 ₽ </p>
+                                    <button class="item__remove-cart">
+                                        <svg>
+                                            <use href="#remove"/>
+                                        </svg>
+                                    </button>
+                                </li>
+                                <li class="cart-goods__item item">
+                                    <img src="img/clock.jpg" class="item__img" alt="">
+                                    <div class="item__detail">
+                                        <h4 class="item__title">Смарт-часы CANYON Lollypop</h4>
+                                        <p class="item__vendor-code">Артикул: 654675757</p>
+                                    </div>
+                                    <div class="item__controle">
+                                        <div class="item__count">
+                                            <button class="item__btn item__btn_dec">–</button>
+                                            <output>1</output>
+                                            <button class="item__btn item__btn_inc">+</button>
+                                        </div>
+                                    </div>
+                                    <p class="item__price">12479 ₽ </p>
+                                    <button class="item__remove-cart">
+                                        <svg>
+                                            <use href="#remove"/>
+                                        </svg>
+                                    </button>
+                                </li>
+                                <li class="cart-goods__item item">
+                                    <img src="img/block.jpg" class="item__img" alt="">
+                                    <div class="item__detail">
+                                        <h4 class="item__title">Смарт-приставка Selenga R1</h4>
+                                        <p class="item__vendor-code">Артикул: 724651960</p>
+                                    </div>
+                                    <div class="item__controle">
+                                        <div class="item__count">
+                                            <button class="item__btn item__btn_dec">–</button>
+                                            <output>1</output>
+                                            <button class="item__btn item__btn_inc">+</button>
+                                        </div>
+                                    </div>
+                                    <p class="item__price">7944 ₽ </p>
+                                    <button class="item__remove-cart">
+                                        <svg>
+                                            <use href="#remove"/>
+                                        </svg>
+                                    </button>
+                                </li>
+
+
+                            </ul>
+                        </section>
+                        <section class="cart__address address">
+                            <h3 class="cart__title">Адрес доставки</h3>
+                            <form class="address__form">
+                                <label>
+                                    <select class="address_item address_item_select" name="City" id="">
+                                        <option value="" disabled selected>Город</option>
+                                        <option value="Moscow">Москва</option>
+                                        <option value="Ekaterinburg">Екатеринбург</option>
+                                    </select>
+                                </label>
+                                <label><input class="address_item" type="text" placeholder="Улица, дом"></label>
+                                <label><input class="address_item" type="text" placeholder="Квартира"></label>
+                                <label><input class="address_item" type="text" placeholder="ФИО"></label>
+                                <label><input class="address_item" type="text" placeholder="Индекс"></label>
+                                <button lass="address_item address_item_btn">Сохранить</button>
+                                <label class="address__label-save">
+                                    <input type="checkbox" name="save-address">Запомнить этот адрес
+                                </label>
+                            </form>
+                        </section>
+
+                     <section class="cart__total">
+                         <h3 class="visually-hidden">Итог</h3>
+                         <ul class="total__table">
+                             <li class="total__row total__row_header">
+                                 <span>Итого</span>
+                                 <span>41 222 ₽</span>
+                             </li>
+                             <li class="total__row total__row_grey">
+                                 <span>Товары, 3 шт.</span>
+                                 <span>41 222 ₽</span>
+                             </li>
+                             <li class="total__row total__row_grey">
+                                 <span>Скидка</span>
+                                 <span>0 ₽</span>
+                             </li>
+                             <li class="total__row total__row_grey">
+                                 <span>Доставка</span>
+                                 <span>0 ₽</span>
+                             </li>
+                             <li class="total__row">
+                                 <span>Дата</span>
+                                 <span>01 - 03 июля</span>
+                             </li>
+                             <li class="total__row">
+                                 <span>Оплата</span>
+                                 <span>Картой</span>
+                             </li>
+                         </ul>
+                         <div class="total__order">
+                             <button class="total__submit">Оформить заказ</button>
+                             <label class="total__agree">
+                                 <input type="checkbox" name="agree">
+                                 <span>Согласен с <a class="total__agree-link" href="">условиями</a> правил пользования торговой площадкой и&nbsp;правилами возврата</span>
+                             </label>
+                         </div>
+
+
+
+
+                     </section>
+                    </div>
+        </section>
 
     </main>
 
@@ -114,6 +248,16 @@
             </div>
         </div>
     </footer>
+
+    <!--крестик remove-item-->
+    <svg style="display: none" width="32" height="33">
+        <symbol id="remove" viewBox="0 0 20 20" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path d="M19.3337 2.54667L17.4537 0.666668L10.0003 8.12L2.54699 0.666668L0.666992 2.54667L8.12033 10L0.666992 17.4533L2.54699 19.3333L10.0003 11.88L17.4537 19.3333L19.3337 17.4533L11.8803 10L19.3337 2.54667Z"/>
+        </symbol>
+    </svg>
+
+
+
 </body>
 
 </html>
