--- a/src/index.html
+++ b/src/index.html
@@ -51,10 +51,10 @@
                 <div class="catalog__goods goods"></div>
                 <ul class="goods__list">
                     <li class="goods__item">
-                       <article class="goods-item"></article>
+                        <article class="goods-item"></article>
                         <a href="card.html">
-                          <img class="goods__item__image" src="img/phone.jpg" alt="Good">
-                          <h3 class="goods__item__title">Смартфон APPLE iPhone 12 64GB Purple</h3>
+                            <img class="goods__item__image" src="img/phone.jpg" alt="Good">
+                            <h3 class="goods__item__title">Смартфон APPLE iPhone 12 64GB Purple</h3>
                         </a>
                         <div class="goods-item__buy">
                             <p class="goods-item__price">120 999 ₽</p>
@@ -195,7 +195,7 @@
                         </fieldset>
                         <fieldset class="filter__field">
                             <legend class="filter__field-title">Категория</legend>
-                                <label>
+                            <label>
                                     <select class="filter__select" name="category">
                                        <option value="phone">Смартфоны</option>
                                        <option value="tab">Планшеты</option>
@@ -338,31 +338,31 @@
         </div>
     </footer>
 
-<div class="order__status">
-    <div class="order__status__success visually-hidden">
-        <h3 class="order__status__title">
-        Ваша заявка успешно отправлена
-        </h3>
-        <p class="order__status__text">
-            Наши менеджеры свяжутся с вами в течении 3-х рабочих дней
-        </p>
-        <svg width="100" height="100" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <div class="order__status">
+        <div class="order__status__success visually-hidden">
+            <h3 class="order__status__title">
+                Ваша заявка успешно отправлена
+            </h3>
+            <p class="order__status__text">
+                Наши менеджеры свяжутся с вами в течении 3-х рабочих дней
+            </p>
+            <svg width="100" height="100" viewBox="0 0 100 100" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
             <circle cx="50" cy="50" r="50" fill="#04E277"/>
-            <path d="M42.262 60.8333L31.4286 50L27.8175 53.6111L42.262 68.0556L73.2143 37.1032L69.6032 33.4921L42.262 60.8333Z" fill="white"/>
+            <path d="M42.262 60.8333L31.4286 50L27.8175 53.6111L42.262 68.0556L73.2143 37.1032L69.6032 33.4921L42.262 60.8333Z"/>
         </svg>
-    </div>
-    <div class="order__status__failure visually-hidden">
-        <h3 class="order__status__title">
-            Упс... Что-то пошло не так
-        </h3>
-        <p class="order__status__text">
-            Не удалось отправить заявку. Пожалуйста, повторите отправку еще раз
-        </p>
-        <svg width="100" height="100" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M50 0C22.3857 0 0 22.3857 0 50C0 77.6143 22.3857 100 50 100C77.6143 100 100 77.6143 100 50C100 22.3857 77.6143 0 50 0ZM50 13.6718C70.0635 13.6718 86.3282 29.9365 86.3282 50C86.3282 70.0635 70.0635 86.3282 50 86.3282C29.9365 86.3282 13.6718 70.0635 13.6718 50C13.6718 29.9365 29.9365 13.6718 50 13.6718ZM23.4558 40.1794V59.8205H76.5442V40.1794H23.4558Z" fill="#EB5757"/>
+        </div>
+        <div class="order__status__failure visually-hidden">
+            <h3 class="order__status__title">
+                Упс... Что-то пошло не так
+            </h3>
+            <p class="order__status__text">
+                Не удалось отправить заявку. Пожалуйста, повторите отправку еще раз
+            </p>
+            <svg width="100" height="100" viewBox="0 0 100 100" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path d="M50 0C22.3857 0 0 22.3857 0 50C0 77.6143 22.3857 100 50 100C77.6143 100 100 77.6143 100 50C100 22.3857 77.6143 0 50 0ZM50 13.6718C70.0635 13.6718 86.3282 29.9365 86.3282 50C86.3282 70.0635 70.0635 86.3282 50 86.3282C29.9365 86.3282 13.6718 70.0635 13.6718 50C13.6718 29.9365 29.9365 13.6718 50 13.6718ZM23.4558 40.1794V59.8205H76.5442V40.1794H23.4558Z"/>
         </svg>
+        </div>
     </div>
-</div>
 
 
 </body>
